Bug 384673 - Global show/hide shortcut does not work
Summary: Global show/hide shortcut does not work
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-13 19:42 UTC by Mirek Długosz
Modified: 2023-11-14 17:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mirek Długosz 2017-09-13 19:42:16 UTC
Global "Show/hide KTorrent" keyboard shortcut doesn't work.

Steps to reproduce

1. Go to System Settings -> Shortcuts -> Global shortcuts -> KTorrent
2. Make sure that there is some shortcut for "Show/hide KTorrent" entry (Alt+Shift+W in my case; Alt+Shift+T by default)
3. Press shortcut set in previous step

Expected results

KTorrent window appears (if it was hidden). KTorrent window disappears (if it was visible).

Actual results

Nothing happens
Comment 1 Christoph Feck 2017-09-15 22:43:30 UTC
Interesting. I have no KTorrent entry in System Settings -> Shortcuts -> Global shortcuts.
Comment 2 Justin Zobel 2022-11-10 08:52:26 UTC
Thank you for reporting this issue in KDE software. As it has been a while since this issue was reported, can we please ask you to see if you can reproduce the issue with a recent software version?

If you can reproduce the issue, please change the status to "REPORTED" when replying. Thank you!
Comment 3 Mirek Długosz 2022-11-10 09:25:15 UTC
Yes, that is still the case. Pressing default shortcut for Show/Hide does nothing. Pressing custom shortcut does nothing. Doesn't matter if KTorrent window has focus or not.

Steps changed a little, now you need to go to System Settings -> Shortcuts -> Shortcuts, select KTorrent in "Applications" section (there's a list that has few sections: "Applications", "System services", "Common actions").

This is Debian testing updated today.
KTorrent version: 21.12.3
KDE Frameworks: 5.98.0
Qt: 5.15.6
I am still on X11.
Comment 4 Bug Janitor Service 2023-10-30 21:11:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/ktorrent/-/merge_requests/77