Fix global shortcut actions

- show/hide window action
- Suspend all running shortcuts action

BUG: 384673